separate bindings from wrapper

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,9 +4,11 @@ PROGRAMS=bus pair pubsub reqrep survey pipeline filesend
 
 all: $(PROGRAMS)
 
-$(PROGRAMS): % : %.d ../bindings/nano.d
-	dmd $< ../bindings/nano.d -L-lnanomsg
+$(PROGRAMS): % : %.d ../source/kaleidic/nanomsg/bindings.d
+	$(DC) $< ../source/kaleidic/nanomsg/bindings.d -I../source -L-lnanomsg
 
 clean:		
 	rm -f *.o
+
+realclean purge: clean
 	rm -f $(PROGRAMS)
